# crude_oil

./: main.ipynb  main.py  pyproject.toml
