[project]
name = "crude-oil"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kagglehub>=1.0.2",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "polars>=1.41.2",
    "scikit-learn>=1.9.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "xgboost>=3.2.0",
]
